--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -21,7 +21,7 @@ jobs:
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: 2.6
 
 #     - name: Publish to GitHub Package Registry
 #       run: |
